// <auto-generated />
using System;
using BarberLosPeluchitos.Infrastructure.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace BarberLosPeluchitos.Infrastructure.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    partial class ApplicationDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Barbero", b =>
                {
                    b.Property<int>("IdBarbero")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id_barbero");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("IdBarbero"));

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("nombre");

                    b.Property<string>("Telefono")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("telefono");

                    b.HasKey("IdBarbero");

                    b.ToTable("barbero", (string)null);
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Cita", b =>
                {
                    b.Property<int>("IdCita")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id_cita");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("IdCita"));

                    b.Property<int>("Duracion")
                        .HasColumnType("integer")
                        .HasColumnName("duracion");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .ValueGeneratedOnAdd()
                        .HasMaxLength(15)
                        .HasColumnType("character varying(15)")
                        .HasDefaultValue("Pendiente")
                        .HasColumnName("estado");

                    b.Property<DateTime>("FechaHora")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_hora")
                        .HasDefaultValueSql("CURRENT_TIMESTAMP");

                    b.Property<int>("IdCliente")
                        .HasColumnType("integer")
                        .HasColumnName("id_cliente");

                    b.Property<int>("IdServicio")
                        .HasColumnType("integer")
                        .HasColumnName("id_servicio");

                    b.Property<int>("IdTurno")
                        .HasColumnType("integer")
                        .HasColumnName("id_turno");

                    b.Property<decimal>("Precio")
                        .HasPrecision(8, 2)
                        .HasColumnType("numeric(8,2)")
                        .HasColumnName("precio");

                    b.HasKey("IdCita");

                    b.HasIndex("IdCliente");

                    b.HasIndex("IdServicio");

                    b.HasIndex("IdTurno")
                        .IsUnique();

                    b.HasIndex("FechaHora", "Estado");

                    b.ToTable("cita", (string)null);
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Cliente", b =>
                {
                    b.Property<int>("IdCliente")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id_cliente");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("IdCliente"));

                    b.Property<string>("ContrasenaHash")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("contrasena_hash");

                    b.Property<string>("Correo")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("correo");

                    b.Property<DateOnly>("FechaRegistro")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("date")
                        .HasColumnName("fecha_registro")
                        .HasDefaultValueSql("CURRENT_DATE");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("nombre");

                    b.Property<string>("Telefono")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("telefono");

                    b.HasKey("IdCliente");

                    b.HasIndex("Correo")
                        .IsUnique();

                    b.ToTable("cliente", (string)null);
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.HorarioDisponibilidad", b =>
                {
                    b.Property<int>("IdHorario")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id_horario");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("IdHorario"));

                    b.Property<string>("DiaSemana")
                        .IsRequired()
                        .HasMaxLength(10)
                        .HasColumnType("character varying(10)")
                        .HasColumnName("dia_semana");

                    b.Property<TimeOnly>("HoraFin")
                        .HasColumnType("time without time zone")
                        .HasColumnName("hora_fin");

                    b.Property<TimeOnly>("HoraInicio")
                        .HasColumnType("time without time zone")
                        .HasColumnName("hora_inicio");

                    b.Property<int>("IdBarbero")
                        .HasColumnType("integer")
                        .HasColumnName("id_barbero");

                    b.HasKey("IdHorario");

                    b.HasIndex("IdBarbero");

                    b.ToTable("horario_disponibilidad", (string)null);
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Servicio", b =>
                {
                    b.Property<int>("IdServicio")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id_servicio");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("IdServicio"));

                    b.Property<int>("DuracionBase")
                        .HasColumnType("integer")
                        .HasColumnName("duracion_base");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("nombre");

                    b.Property<decimal>("PrecioBase")
                        .HasPrecision(8, 2)
                        .HasColumnType("numeric(8,2)")
                        .HasColumnName("precio_base");

                    b.HasKey("IdServicio");

                    b.ToTable("servicio", (string)null);
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Turno", b =>
                {
                    b.Property<int>("IdTurno")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id_turno");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("IdTurno"));

                    b.Property<string>("Estado")
                        .IsRequired()
                        .ValueGeneratedOnAdd()
                        .HasMaxLength(15)
                        .HasColumnType("character varying(15)")
                        .HasDefaultValue("Disponible")
                        .HasColumnName("estado");

                    b.Property<DateOnly>("Fecha")
                        .HasColumnType("date")
                        .HasColumnName("fecha");

                    b.Property<TimeOnly>("HoraFin")
                        .HasColumnType("time without time zone")
                        .HasColumnName("hora_fin");

                    b.Property<TimeOnly>("HoraInicio")
                        .HasColumnType("time without time zone")
                        .HasColumnName("hora_inicio");

                    b.Property<int>("IdBarbero")
                        .HasColumnType("integer")
                        .HasColumnName("id_barbero");

                    b.HasKey("IdTurno");

                    b.HasIndex("IdBarbero", "Fecha", "Estado");

                    b.HasIndex("IdBarbero", "Fecha", "HoraInicio")
                        .IsUnique();

                    b.ToTable("turno", (string)null);
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Cita", b =>
                {
                    b.HasOne("BarberLosPeluchitos.Core.Entities.Cliente", "Cliente")
                        .WithMany("Citas")
                        .HasForeignKey("IdCliente")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("BarberLosPeluchitos.Core.Entities.Servicio", "Servicio")
                        .WithMany("Citas")
                        .HasForeignKey("IdServicio")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("BarberLosPeluchitos.Core.Entities.Turno", "Turno")
                        .WithOne("Cita")
                        .HasForeignKey("BarberLosPeluchitos.Core.Entities.Cita", "IdTurno")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Cliente");

                    b.Navigation("Servicio");

                    b.Navigation("Turno");
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.HorarioDisponibilidad", b =>
                {
                    b.HasOne("BarberLosPeluchitos.Core.Entities.Barbero", "Barbero")
                        .WithMany("HorariosDisponibilidad")
                        .HasForeignKey("IdBarbero")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Barbero");
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Turno", b =>
                {
                    b.HasOne("BarberLosPeluchitos.Core.Entities.Barbero", "Barbero")
                        .WithMany("Turnos")
                        .HasForeignKey("IdBarbero")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Barbero");
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Barbero", b =>
                {
                    b.Navigation("HorariosDisponibilidad");

                    b.Navigation("Turnos");
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Cliente", b =>
                {
                    b.Navigation("Citas");
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Servicio", b =>
                {
                    b.Navigation("Citas");
                });

            modelBuilder.Entity("BarberLosPeluchitos.Core.Entities.Turno", b =>
                {
                    b.Navigation("Cita");
                });
#pragma warning restore 612, 618
        }
    }
}
